# deno-runtime-auto-translate-web-app

./: Cargo.toml  chatgpt.txt  index.html  script.js  styles.css
deno/: deno_runtime_auto_translate_web_app_bg.wasm  hello.js
src/: lib.rs
